--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,184 +29,6 @@
     <script src="/jquery/jquery.min.js"></script>
 
     <script type="text/javascript">
-      var webSocket;
-      var peerConnections = {};
-      var streams = {};
-
-      var mediaRequest = {
-        audio:true,
-        video:true
-      };
-
-      var constraints ={ mandatory: { OfferToReceiveAudio: true, OfferToReceiveVideo: true } };
-
-
-      function createVideo(id,src){
-	var html =  '';
-	html += '<div class="col-md-4" id="stream-'+id+'" >';
-      	html += '<video style="width:100%" src="'+src+'" autoplay="autoplay" ' + (id == 'this' ? 'muted' : '')+  '/>';
-	html += '</div>';
-	$("#streamContainer").append($(html));
-      }
-
-
-      function onStreamArrived(id, stream){
-	  console.log(id, stream);
-          var src = window.URL.createObjectURL(stream);
-	  createVideo(id,src);
-          streams[id] = stream;
-          console.log(stream);
-      }
-
-      function startSignalingProtocol(){
-          webSocket.send(JSON.stringify({
-             type:'hello'
-          }));
-      }
-
-
-      function getUserMedia(){
-          navigator.mediaDevices.getUserMedia(mediaRequest).then(function(stream) {
-            onStreamArrived('this', stream);
-            startSignalingProtocol();
-          }.bind(this)).catch(console.log);
-      }
-
-      function createOffer(id, stream){
-          var peerConnection = peerConnections[id];
-          peerConnection.addStream(stream);
-          peerConnection.createOffer(function (lsd) {
-              peerConnection.setLocalDescription(lsd, function() {
-                  webSocket.send(JSON.stringify({
-		      to: id,
-                      type : "offer",
-                      content : lsd
-                  }));
-              }, console.log);
-            }, console.log,constraints);
-      }
-
-      function createAnswer(id, stream){
-	console.log('creating answer', id, stream);
-
-          var peerConnection = peerConnections[id];
-          peerConnection.addStream(stream);
-          peerConnection.createAnswer(function (lsd) {
-              	console.log('answer created');
-	      peerConnection.setLocalDescription(lsd, function() {
-                  webSocket.send(JSON.stringify({
-		      to: id,
-                      type : "answer",
-                      content : lsd
-                  }));
-              }, console.log);
-            }, console.log,constraints);
-      }
-
-      function createPeerConnection(id){
-        var peerConnection = new RTCPeerConnection({
-            iceServers : [
-                {
-                    urls : "stun:stun.iptel.org"
-                },
-                {
-                    urls : "stun:stun.ekiga.net"
-                },
-                {
-                    urls : "stun:stun.fwdnet.net"
-                },
-                {
-                    urls : "stun:stun.ideasip.com"
-                }
-            ]
-        });
-
-        peerConnection.onicecandidate = function(event) {
-            if (event.candidate) {
-                var msg = {
-                    type : "iceCandidate",
-                    content : event.candidate
-                }
-                webSocket.send(JSON.stringify(msg));
-            }
-        }
-
-        peerConnection.onaddstream = function (e) {
-            onStreamArrived(id, e.stream);
-        };
-
-       peerConnection.onaddstream = function (e) {
-            onStreamArrived(id, e.stream);
-        };
-
-	peerConnection.oniceconnectionstatechange = function() {
-	    if(peerConnection.iceConnectionState == 'disconnected') {
-		    	  $('#stream-'+id).remove();
-	    }
-	}
-
-
-        peerConnections[id] = peerConnection;
-      }
-        function wsurl(s) {
-            var l = window.location;
-            return ((l.protocol === "https:") ? "wss://" : "ws://") + l.hostname + (((l.port != 80) && (l.port != 443)) ? ":" + l.port : "") + s;
-        }
-
-
-      $( document ).ready(function() {
-        if ("WebSocket" in window){
-           webSocket = new WebSocket(wsurl("/ws"));
-
-           webSocket.onopen = function() {
-              getUserMedia();
-           };
-
-
-           webSocket.onmessage = function (evt) {
-              console.log(JSON.stringify(received_msg));
-              var received_msg = JSON.parse(evt.data);
-              switch(received_msg.type){
-                case 'hello':
-                  createPeerConnection(received_msg.from);
-                  createOffer(received_msg.from,streams['this']);
-                break;
-								case 'offer':
-									createPeerConnection(received_msg.from);
-									var rsd = new RTCSessionDescription(received_msg.content);
-									peerConnections[received_msg.from].setRemoteDescription(rsd, function(){
-									},console.log);
-									createAnswer(received_msg.from, streams['this']);
-								break;
-								case 'answer':
-									var rsd = new RTCSessionDescription(received_msg.content);
-									peerConnections[received_msg.from].setRemoteDescription(rsd, function(){
-
-									},console.log);
-
-								break;
-								case  'iceCandidate':
-														  var candidate = new RTCIceCandidate(received_msg.content);
-									peerConnections[received_msg.from].addIceCandidate(candidate, function() {
-
-									}, console.log);
-								break;
-              }
-           };
-
-           webSocket.onclose = function() {
-
-           };
-
-           window.onbeforeunload = function(event) {
-              webSocket.close();
-           };
-        }
-        else {
-           // The browser doesn't support WebSocket
-           alert("WebSocket NOT supported by your Browser!");
-        }
-      });
 
 	    </script>
 
@@ -232,6 +54,8 @@
 
     <!-- Bootstrap core JavaScript -->
     <script src="/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/adapter.min.js"></script>
+    <script src="/app.js"></script>
 
   </body>
 
