This works better

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,7 +54,7 @@
 
     <!-- Bootstrap core JavaScript -->
     <script src="/bootstrap/js/bootstrap.min.js"></script>
-  <!--  <script src="/adapter.min.js"></script>-->
+    <script src="/adapter.min.js"></script>
     <script src="/app.js"></script>
 
   </body>
