--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,6 @@
 
     <!-- Bootstrap core CSS -->
     <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom styles for this template -->
     <style>
       body {
@@ -50,6 +49,7 @@
       <div class="row" id="streamContainer">
        
       </div>
+      <div id="log"></div>
     </div>
 
     <!-- Bootstrap core JavaScript -->
